noc: Make css/base.css shared between index, db and conf views
It wasn't actually a base stylesheet before. Remove redundant
copies of base styles now coming from base.css.

Change-Id: I1b4504b04fd8fc26a280306e3aaed6e0f68781d6

--- a/docroot/noc/index.html
+++ b/docroot/noc/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Wikimedia NOC</title>
+	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/vector.css">
 	<meta name="robots" content="index,follow">
 	<style>dd { margin-bottom: 1em; }</style>
